[package]
name = "project-zero"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.1"
log = "0.4"
simple_logger = "1.13.0"
cgmath = "0.18.0"

strum_macros = "0.22"
strum = { version = "0.22", features = ["derive"] }